--- a/portfolio_manager/templates/dashboard.html
+++ b/portfolio_manager/templates/dashboard.html
@@ -1,99 +1,119 @@
-{% extends 'base.html' %} {% block styles %} {% load static %}
-<link rel="stylesheet" href="{% static 'css/dashboard.css' %}" />
-{% endblock %} {% block content %}
-<!--TODO: Create display flex and center-->
-<div class="container-fluid">
-  <span>menos</span>
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block styles %}
+<link rel="stylesheet" type="text/css" href="{% static "css/dashboard.css" %}" />
+{%endblock %}
+
+{% block content %}
+<div class="switch-container">
+  <span>Show Assets Weights variation over time</span>
   <label class="switch">
     <input id="checkboxinp" type="checkbox" />
     <span class="slider round"></span>
   </label>
-  <span>mas</span>
+  <span>Show Portfolio Value variation over time</span>
 </div>
 <div id="weightsChartContainer"></div>
-<canvas id="canvas"></canvas>
+<div class="canvas-container">
+  <canvas id="canvas"></canvas>
+</div>
 
-<script>
-  //TODO: Make one graph display none on init
-  //TODO: Create readme explaining everything
-  function changeDisplayGraphs() {
-    var weightsChart = $('#weightsChartContainer')[0];
-    var portfolioChart = $('#canvas')[0];
-    if (weightsChart.style.display === 'none') {
-      weightsChart.style.display = 'block';
-      portfolioChart.style.display = 'none';
-    } else {
-      weightsChart.style.display = 'none';
-      portfolioChart.style.display = 'block';
+{% endblock %}
+
+{% block scripts %}
+  <script>
+    //TODO: Create readme explaining everything
+    function changeDisplayGraphs() {
+      var weightsChart = $('#weightsChartContainer')[0];
+      var portfolioChart = $('#canvas')[0];
+      if (weightsChart.style.display === 'none') {
+        weightsChart.style.display = 'block';
+        portfolioChart.style.display = 'none';
+      } else {
+        weightsChart.style.display = 'none';
+        portfolioChart.style.display = 'block';
+      }
     }
-  }
-  $('#checkboxinp').click(changeDisplayGraphs);
+    $('#checkboxinp').click(changeDisplayGraphs);
 
-  /* Function to create graph of portfolio values */
-  var portfolioValues = JSON.parse('{{ portfolio_values | escapejs }}');
-  var value_dates = portfolioValues.map(function (e) {
-    return e.date;
-  });
-  var current_portfolio = portfolioValues[0].portfolio;
-  var values = portfolioValues.map(function (e) {
-    return e.value;
-  });
+    /* Function to create graph of portfolio values */
+    var portfolioValues = JSON.parse('{{ portfolio_values | escapejs }}');
+    var value_dates = portfolioValues.map(function (e) {
+      return e.date;
+    });
+    var current_portfolio = portfolioValues[0].portfolio;
+    var values = portfolioValues.map(function (e) {
+      return e.value;
+    });
 
-  var ctx = canvas.getContext('2d');
-  var config = {
-    type: 'line',
-    data: {
-      labels: value_dates,
-      datasets: [
-        {
-          label: `Portfolio ${current_portfolio}`,
-          data: values,
-        },
-      ],
-    },
-  };
-  var newChart = new Chart(ctx, config);
-  //portfolioChart.render();
-  /* End Function */
+    canvas.style.display = 'none';
+    var ctx = canvas.getContext('2d');
+    var config = {
+      type: 'line',
+      data: {
+        labels: value_dates,
+        datasets: [
+          {
+            label: `Portfolio ${current_portfolio}`,
+            data: values,
+          },
+        ],
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false
+      }
+    };
+    var newChart = new Chart(ctx, config);
+    /* End Function */
 
-  /* Function to create graph of asset weights */
-  const assetWeights = JSON.parse('{{ asset_weights | escapejs }}').assets;
-  const dates = Object.keys(assetWeights);
-  const assets = assetWeights[dates[0]].map((a) => a.asset);
+    /* Function to create graph of asset weights */
+    const assetWeights = JSON.parse('{{ asset_weights | escapejs }}').assets;
+    const dates = Object.keys(assetWeights);
+    const assets = assetWeights[dates[0]].map((a) => a.asset);
+    var test = assets.map((asset) => (
+      dates.map((date) => ({
+        x: new Date(date),
+        y: assetWeights[date].find((element) => element.asset === asset).weight,
+      }))
+    ))
+    console.log("test", test);
+    const dataPoints = assets.map((asset) => ({
+      type: 'stackedArea',
+      name: asset,
+      showInLegend: true,
+      dataPoints: dates.map((date) => ({
+        x: new Date(date),
+        y: assetWeights[date].find((element) => element.asset === asset).weight,
+      })),
+    }));
+    const weightsChart = new CanvasJS.Chart('weightsChartContainer', {
+      animationEnabled: true,
+      title: {
+        text: 'Asset Weights Over Time',
+      },
+      axisX: {
+        valueFormatString: 'MMM DD, YYYY',
+      },
+      axisY: {
+        title: 'Weight',
+      },
+      legend: {
+        cursor: 'pointer',
+        verticalAlign: 'top',
+        horizontalAlign: 'center',
+        dockInsidePlotArea: true,
+      },
+      toolTip: {
+        shared: true,
+      },
+      data: dataPoints,
+    });
 
-  const dataPoints = assets.map((asset) => ({
-    type: 'stackedArea',
-    name: asset,
-    showInLegend: true,
-    dataPoints: dates.map((date) => ({
-      x: new Date(date),
-      y: assetWeights[date].find((element) => element.asset === asset).weight,
-    })),
-  }));
-  const weightsChart = new CanvasJS.Chart('weightsChartContainer', {
-    animationEnabled: true,
-    title: {
-      text: 'Asset Weights Over Time',
-    },
-    axisX: {
-      valueFormatString: 'MMM DD, YYYY',
-    },
-    axisY: {
-      title: 'Weight',
-    },
-    legend: {
-      cursor: 'pointer',
-      verticalAlign: 'top',
-      horizontalAlign: 'center',
-      dockInsidePlotArea: true,
-    },
-    toolTip: {
-      shared: true,
-    },
-    data: dataPoints,
-  });
+    weightsChart.render();
+    /* End of function to create graph of asset weights */
+  </script>
 
-  weightsChart.render();
-  /* End of function to create graph of asset weights */
-</script>
 {% endblock %}
