--- a/portfolio_manager/templates/dashboard.html
+++ b/portfolio_manager/templates/dashboard.html
@@ -24,96 +24,13 @@
 
 {% block scripts %}
   <script>
-    //TODO: Create readme explaining everything
-    function changeDisplayGraphs() {
-      var weightsChart = $('#weightsChartContainer')[0];
-      var portfolioChart = $('#canvas')[0];
-      if (weightsChart.style.display === 'none') {
-        weightsChart.style.display = 'block';
-        portfolioChart.style.display = 'none';
-      } else {
-        weightsChart.style.display = 'none';
-        portfolioChart.style.display = 'block';
-      }
+    function getportfolioValues(){
+      return JSON.parse('{{ portfolio_values | escapejs }}');
     }
-    $('#checkboxinp').click(changeDisplayGraphs);
-
-    /* Function to create graph of portfolio values */
-    var portfolioValues = JSON.parse('{{ portfolio_values | escapejs }}');
-    var value_dates = portfolioValues.map(function (e) {
-      return e.date;
-    });
-    var current_portfolio = portfolioValues[0].portfolio;
-    var values = portfolioValues.map(function (e) {
-      return e.value;
-    });
-
-    canvas.style.display = 'none';
-    var ctx = canvas.getContext('2d');
-    var config = {
-      type: 'line',
-      data: {
-        labels: value_dates,
-        datasets: [
-          {
-            label: `Portfolio ${current_portfolio}`,
-            data: values,
-          },
-        ],
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false
-      }
-    };
-    var newChart = new Chart(ctx, config);
-    /* End Function */
-
-    /* Function to create graph of asset weights */
-    const assetWeights = JSON.parse('{{ asset_weights | escapejs }}').assets;
-    const dates = Object.keys(assetWeights);
-    const assets = assetWeights[dates[0]].map((a) => a.asset);
-    var test = assets.map((asset) => (
-      dates.map((date) => ({
-        x: new Date(date),
-        y: assetWeights[date].find((element) => element.asset === asset).weight,
-      }))
-    ))
-    console.log("test", test);
-    const dataPoints = assets.map((asset) => ({
-      type: 'stackedArea',
-      name: asset,
-      showInLegend: true,
-      dataPoints: dates.map((date) => ({
-        x: new Date(date),
-        y: assetWeights[date].find((element) => element.asset === asset).weight,
-      })),
-    }));
-    const weightsChart = new CanvasJS.Chart('weightsChartContainer', {
-      animationEnabled: true,
-      title: {
-        text: 'Asset Weights Over Time',
-      },
-      axisX: {
-        valueFormatString: 'MMM DD, YYYY',
-      },
-      axisY: {
-        title: 'Weight',
-      },
-      legend: {
-        cursor: 'pointer',
-        verticalAlign: 'top',
-        horizontalAlign: 'center',
-        dockInsidePlotArea: true,
-      },
-      toolTip: {
-        shared: true,
-      },
-      data: dataPoints,
-    });
-
-    weightsChart.render();
-    /* End of function to create graph of asset weights */
+    function getAssetWeights(){
+      return JSON.parse('{{ asset_weights | escapejs }}').assets;
+    }
   </script>
 
+  <script src="{% static '/js/dashboard.js' %}"></script>
 {% endblock %}
