--- a/portfolio_manager/templates/retrieve_data.html
+++ b/portfolio_manager/templates/retrieve_data.html
@@ -1,53 +1,47 @@
-{% extends 'base.html' %} {% block content %}
-<form id="portfolio-select-form">
-  <div class="form-group">
-    <label for="portfolio-select">Select Portfolio</label>
-    <select class="form-control" id="portfolio-select" name="portfolio_name">
-      <option disabled selected value> -- select a portfolio -- </option>
-      {% for portfolio in portfolios %}
-      <option>{{ portfolio.name }}</option>
-      {% endfor %}
-    </select>
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block styles %}
+  <link rel="stylesheet" type="text/css" href="{% static "css/retrieve_data.css" %}" />
+{%endblock %}
+
+{% block content %}
+  <h1 class="title">
+    Welcome to the investment portfolio inspector 
+  </h1>
+  <form id="portfolio-select-form">
+    <div class="form-group">
+      <label for="portfolio-select">Select the portfolio you want to inspect:</label>
+      <select class="form-control" id="portfolio-select" name="portfolio_name">
+        <option disabled selected value> -- select a portfolio -- </option>
+        {% for portfolio in portfolios %}
+        <option>{{ portfolio.name }}</option>
+        {% endfor %}
+      </select>
+    </div>
+  </form>
+
+  <div id="date-range-picker" style="display: none">
+    <p>Select Date Range you want to inspect:</p>
+    <input type="text" id="daterange" name="daterange" class="form-control" />
+    <br />
+    <button type="button" id="submit-button" class="btn btn-primary">
+      Submit
+    </button>
   </div>
-</form>
+{% endblock %}
 
-<div id="date-range-picker" style="display: none">
-  <h3>Select Date Range</h3>
-  <input type="text" id="daterange" name="daterange" class="form-control" />
-  <br />
-  <button type="button" id="submit-button" class="btn btn-primary">
-    Submit
-  </button>
-</div>
+{% block scripts %}
 
-<script>
-  $('#portfolio-select').on('change', function () {
-    $.ajax({
-      url: "{% url 'get_portfolio_date_ranges' %}",
-      data: { portfolio_name: $(this).val() },
-      dataType: 'json',
-      success: function (data) {
-        $('#date-range-picker').show();
-        $('input[name="daterange"]').daterangepicker({
-          minDate: data.start_date,
-          maxDate: data.end_date,
-          startDate: data.start_date,
-          endDate: data.end_date,
-        });
-      },
-    });
-  });
+  <script>
+    function getPortfolioDateRangesUrl(){
+      return "{% url 'get_portfolio_date_ranges' %}";
+    }
 
-  $('#submit-button').on('click', function () {
-    var portfolio_name = $('#portfolio-select').val();
-    var date_range = $('input[name="daterange"]').val();
-
-    window.location.href =
-      "{% url 'retrieve_data' %}" +
-      '?portfolio_name=' +
-      portfolio_name +
-      '&date_range=' +
-      date_range;
-  });
-</script>
+    function getRetrieveDataUrl(){
+      return "{% url 'retrieve_data' %}";
+    }
+  </script>
+  <script src="{% static '/js/retrieve_data.js' %}"></script>
 {% endblock %}
